# scarff

./: .env.example  .gitignore  Cargo.toml  README.md  bacon.toml  cog.toml  deny.toml  justfile  makefile  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml.example
.github/workflows/: ci.yml  ci.yml.example  dev.yml  dev_ci.yml  feature.yml  main.yml  push_ci.yml  release.yml  release.yml.example  rust.yml  security.yml  workflows.md
crates/scarff-adapters/: Cargo.toml
crates/scarff-adapters/src/: builtin_templates.rs  lib.rs  template_loader.rs
crates/scarff-adapters/src/filesystem/: local.rs  memory.rs  mod.rs
crates/scarff-adapters/src/renderer/: mod.rs  simple.rs
crates/scarff-adapters/src/template_store/: memory.rs  mod.rs
crates/scarff-cli/: Cargo.toml
crates/scarff-cli/src/: config.rs  error.rs  logging.rs  main.rs  output.rs
crates/scarff-cli/src/cli/: global.rs  mod.rs
crates/scarff-cli/src/commands/: completions.rs  config.rs  init.rs  list.rs  mod.rs  new.rs
crates/scarff-cli/tests/: error_handling_tests.rs  integration_tests.rs
crates/scarff-core/: Cargo.toml
crates/scarff-core/src/: error.rs  lib.rs
crates/scarff-core/src/application/: error.rs  mod.rs
crates/scarff-core/src/application/ports/: mod.rs
crates/scarff-core/src/application/ports/output/: mod.rs
crates/scarff-core/src/application/services/: mod.rs  scaffold_service.rs  template_service.rs
crates/scarff-core/src/domain/: capabilities.rs  common.rs  error.rs  mod.rs  validation.rs  value_objects.rs
crates/scarff-core/src/domain/entities/: common.rs  mod.rs  project_structure.rs  target.rs  template.rs
crates/scarff-core/tests/: integration_tests.rs
docs/: 00_steps.md  knowhow.md  next.md
docs/RFC/: 00_rfc.md
docs/improve/: CARGO_REGISTRY_TOKEN.md  git_branching_strategy.md
docs/improve/new_command/: TestMatrix.md  new_command.md
scripts/: install-hooks.sh
src/: cli.rs  main.rs
src/cli/: commands.rs
src/cli/commands/: init.rs  new.rs
