[workspace]
members = ["crates/scarff-core", "crates/scarff-cli", "crates/scarff-adapters"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Obiechi Ebuka Samuel oesisu@outlook.com"]
rust-version = "1.85"
description = "Project scaffolding made instant - CLI tool"
documentation = "https://docs.rs/scarff"
repository = "https://github.com/cosecruz/scarff"
license = "MIT OR Apache-2.0"
keywords = ["scaffolding", "cli", "project", "generator", "template"]
categories = ["command-line-utilities", "development-tools"]


[workspace.dependencies]
# crates
scarff-core = { path = "crates/scarff-core" }
scarff-adapters = { path = "crates/scarff-adapters" }
scarff-cli = { path = "crates/scarff-cli" }

# Async runtime
# tokio = { version = "1.49.0", features = ["full", "tracing"] }
# async-trait = "0.1.89"

#Error handling
anyhow = "1.0.101"
thiserror = "2.0.18"
miette = { version = "7.6.0", features = ["fancy"] }

# Observability
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


# Testing
mockall = "0.14.0"
assert_cmd = "2.1.2"
predicates = "3.1.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
dirs = "6.0"
config = "0.15.19"


[profile.release]
opt-level = 3
# lto = "fat"       #full link time optimization for performance
lto = "thin"      # Faster builds than fat LTO, good performance
codegen-units = 1 # better optimization at the cost of compile time;
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

# Fast test builds
[profile.test]
opt-level = 2
debug = true

# Profile for faster development iterations
[profile.dev.package."*"]
opt-level = 2
