[package]
name = "scarff-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Infrastructure adapters for Scarff (filesystem, template storage, rendering)"

[dependencies]
# Core dependency
scarff-core = { path = "../scarff-core" }

# Workspace dependencies
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# tokio = { workspace = true }
# async-trait = { workspace = true }
toml = "0.9.8"
walkdir = "2.5"
# For template rendering (future)
# tera = { version = "1.19", optional = true }
# handlebars = { version = "5.0", optional = true }

[dev-dependencies]
tempdir = "0.3"
tempfile = "3.25"

[features]
default = []
# advanced-templates = ["tera", "handlebars"]

[lib]
name = "scarff_adapters"
path = "src/lib.rs"
